# descriptor-attestation

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
conference_baseline_snapshot/: .gitignore  READ_ONLY.md  pyproject.toml  requirements.txt
conference_baseline_snapshot/docs/: JOURNAL_DOCUMENTATION.md
conference_baseline_snapshot/experiments/: ablations.py  build_contribution1_figure.py  build_contribution2_figure.py  build_contribution3_figure.py  build_methods_figure.py  defense_comparison.py  federation_demo.py  hardware_validation.py  phase2_cameraready.py  phase3_cameraready.py  witness_detection.py
conference_baseline_snapshot/src/qem/: __init__.py  api.py  attestation.py  coordinator.py  descriptor.py  device.py  hardware.py  predictor.py  witness.py
configs/: backend_config.yaml  experiment_config.yaml  witness_config.yaml
data/: README.md
data/processed/: predictor.npz  predictor_norms.json  witnesses.json
data/processed/section4/: master_summary.md  values.json
data/processed/section5A/: task1_binomial_cis.json
data/processed/section5D/: replication_full_trial_dump.json  task5b_aggregated_scaling.json
data/processed/section5E/: task4_heldout_test.json  task4_replicated.json
data/processed/section5E_threshold/: master_summary.md  (+4 more)
docs/: data_dictionary.md  qst_review_guide.md  reproducibility.md  zenodo_release_checklist.md
figures/source/: make_section5B_completeness.py  make_section5C_attack_detection.py  make_section5D_federation_scaling.py  make_section5E_heldout_margins.py
scripts/: 01_generate_witnesses.py  02_train_predictor.py  03_compute_thresholds.py  04_run_attack_analysis.py  05_run_heldout_calibration.py  06_run_scaling_analysis.py  07_run_baselines.py  08_make_figures.py  reproduce_all.sh
src/descriptor_attestation/: __init__.py  deployment_prior.py  statistics.py
tables/: README.md
tests/: test_attacks.py  test_reproduce_smoke.py  test_statistics.py  test_thresholds.py
(+17 files in other folders)
